--- a/routes/mongo.html
+++ b/routes/mongo.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta name="Description" content=""/>
     <link href='/css/main.css' rel='stylesheet' />
-    <script src="/socket.io/socket.io.js"></script>
     <link href="https://transloadit.edgly.net/releases/uppy/v1.14.1/uppy.min.css" rel="stylesheet">
+    <script src="/socket.io/socket.io.js"></script>
     <style>
       #containerForm {
         display: flex;
@@ -259,6 +259,7 @@
       </div>
     </form>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js" ></script>
   <script src="https://transloadit.edgly.net/releases/uppy/v1.14.1/uppy.min.js"></script>
   <script src="https://transloadit.edgly.net/releases/uppy/locales/v1.13.3/ru_RU.min.js"></script>
   
